--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<title>Portfolio Site</title>
 	
 	<!-- Style-->
-	<link rel="stylesheet" href="assets/css/reset.css">
-	<link rel="stylesheet" href="assets/css/style1.css">
-	<link rel="stylesheet" href="assets/css/mediaquery.css">
-	<link rel="stylesheet" href="assets/css/animate.css">
+	<link rel="stylesheet" href="html/assets/css/reset.css">
+	<link rel="stylesheet" href="html/assets/css/style1.css">
+	<link rel="stylesheet" href="html/assets/css/mediaquery.css">
+	<link rel="stylesheet" href="html/assets/css/animate.css">
 
 	<!-- favicon-->
 	<style>
@@ -5536,7 +5536,7 @@
 	
 	
 	<div class="nav">
-		<a href="index.html"><img src="assets/img/logo.png" width="56"></a>
+		<a href="index.html"><img src="html/ssets/img/logo.png" width="56"></a>
 	</div>
 	
 	<div class="nav2">
@@ -5552,7 +5552,7 @@
 				<ul>
 					<li class="menu-tit">&diams; CONTACT &diams;</li>
 					<li class="menu-sub"><a href="sub4.html">keyim91@gmail.com</a></li>
-					<li class="menu-sub1"><a href="assets/img/portfolio.pdf">VIEW PORTFOLIO (PDF) ></a></li>
+					<li class="menu-sub1"><a href="html/assets/img/portfolio.pdf">VIEW PORTFOLIO (PDF) ></a></li>
 				</ul>
 			</div>
 			<div class="right-menu">
