--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 						.st99{fill:none;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;}
 						.st100{fill:#D86F6F;}
 					</style>
-					<a href="sub4.html"><g class="svg1">
+					<a href="html/sub4.html"><g class="svg1">
 						<g>
 							<g class="main-p">
 								<g class="st0">
@@ -5111,7 +5111,7 @@
 						</g>
 					</g>
 					</svg></a>
-			<a href ="sub4.html">
+			<a href ="html/sub4.html">
 				<div class="tit1">
 					<h2>PORTFOLIO</h2>
 					<h3>UX.UI Design &middot; Web Publishing &middot;<br> Product Design &middot; Other </h3>
@@ -5124,7 +5124,7 @@
 		
     <div class="about">
 			 
-      <a href ="sub2-4.html"><svg style="max-width:280px; position:relative; left:50%; top:50%; transform:translate3d(-50%,-50%,0)" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <a href ="html/sub2-4.html"><svg style="max-width:280px; position:relative; left:50%; top:50%; transform:translate3d(-50%,-50%,0)" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 						 viewBox="0 0 262 304" style="enable-background:new 0 0 262 304;" xml:space="preserve">
 					<g class="svg2">
 						<g>
@@ -5284,7 +5284,7 @@
 		<!--// about -->
 		
     <div class="contact">
-      <a href ="sub3.html"><svg style="max-width:320px; position:relative; left:50%; top:50%; transform:translate3d(-50%,-50%,0)" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <a href ="html/sub3.html"><svg style="max-width:320px; position:relative; left:50%; top:50%; transform:translate3d(-50%,-50%,0)" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 						 viewBox="0 0 318 418" style="enable-background:new 0 0 318 418;" xml:space="preserve">
 					<g class="svg3">
 						<g>
@@ -5551,16 +5551,16 @@
 			<div class="left-menu">
 				<ul>
 					<li class="menu-tit">&diams; CONTACT &diams;</li>
-					<li class="menu-sub"><a href="sub4.html">keyim91@gmail.com</a></li>
+					<li class="menu-sub"><a href="html/sub4.html">keyim91@gmail.com</a></li>
 					<li class="menu-sub1"><a href="html/assets/img/portfolio.pdf">VIEW PORTFOLIO (PDF) ></a></li>
 				</ul>
 			</div>
 			<div class="right-menu">
 				<ul>
 					<li class="menu-tit">&diams; NAVIGATION &diams;</li>
-					<li class="menu-sub"><a href="sub4.html">Portfolio</a></li>
-					<li class="menu-sub"><a href="sub2-4.html">About</a></li>
-					<li class="menu-sub"><a href="sub3.html">Contact</a></li>
+					<li class="menu-sub"><a href="html/sub4.html">Portfolio</a></li>
+					<li class="menu-sub"><a href="html/sub2-4.html">About</a></li>
+					<li class="menu-sub"><a href="html/sub3.html">Contact</a></li>
 				</ul>
 			</div>
 		  </div>
