--- a/html/sub2-4.html
+++ b/html/sub2-4.html
@@ -197,7 +197,7 @@
 	
 	
 	<div class="nav">
-		<a href="index.html"><img src="assets/img/logo.png" width="56"></a>
+		<a href="../index.html"><img src="assets/img/logo.png" width="56"></a>
 	</div>
 	
 	<div class="nav2">
