--- a/html/sub3.html
+++ b/html/sub3.html
@@ -111,7 +111,7 @@
   </div>
   
   <div class="nav">
-		<a href="index.html"><img src="assets/img/logo.png" width="56"></a>
+		<a href="../index.html"><img src="assets/img/logo.png" width="56"></a>
 	</div>
 	
 	<div class="nav2">
