--- a/index.html
+++ b/index.html
@@ -5536,7 +5536,7 @@
 	
 	
 	<div class="nav">
-		<a href="index.html"><img src="html/ssets/img/logo.png" width="56"></a>
+		<a href="../index.html"><img src="html/assets/img/logo.png" width="56"></a>
 	</div>
 	
 	<div class="nav2">
