--- a/index.html
+++ b/index.html
@@ -1029,108 +1029,7 @@
 								<circle class="st24" cx="258.9" cy="271.1" r="0.7"/>
 							</g>
 							<g class="codingtit">
-								<g>
-									<g class="st0">
-										<g>
-											<polygon class="st2" points="646,98.8 651.4,95.7 652.2,101.1 646.8,104.3 						"/>
-										</g>
-										<g>
-											<path class="st2" d="M635.7,77.8l5.4-3.1c-1.3,0.8-2.1,2.6-2.1,5.6c0,5.6,2.9,10.8,7.8,13.6c1.7,1,3.5,1.6,4.6,1.7l-5.4,3.1
-												c-1.1-0.1-2.9-0.8-4.6-1.7c-4.9-2.8-7.8-8-7.8-13.6C633.6,80.4,634.4,78.6,635.7,77.8z"/>
-										</g>
-										<g>
-											<polygon class="st2" points="647.1,78 652.5,74.9 651.4,79.2 646,82.4 						"/>
-										</g>
-										<path class="st2" d="M646.5,70.2c-3.9-2.3-7.4-2.8-9.8-1.4l-5.4,3.1c2.4-1.4,5.9-0.9,9.8,1.4c2.9,1.6,5,3.6,6,4.7l5.4-3.1
-											C651.6,73.7,649.4,71.8,646.5,70.2z"/>
-										<g>
-											<path class="st3" d="M641.1,73.3c2.9,1.6,5,3.6,6,4.7l-1.1,4.4c-1.1-1.2-2.7-2.6-4.6-3.7c-4.4-2.5-7.8-1.5-7.8,4.8
-												c0,5.6,2.9,10.8,7.8,13.6c1.7,1,3.5,1.6,4.6,1.7l0.8,5.4c-1,0-3.3-0.7-6.3-2.4c-8.4-4.9-12.7-13.4-12.7-21.4
-												C627.8,70.9,633.8,69,641.1,73.3z"/>
-										</g>
-									</g>
-									<g class="st0">
-										<path class="st2" d="M665.3,104.9c-3.7-2.1-5.9-7.3-5.9-12.8c0-3.3,0.8-5.6,2.3-6.5l-5.4,3.1c-1.5,0.8-2.3,3.2-2.3,6.5
-											c0,5.5,2.2,10.6,5.9,12.8c1.5,0.8,2.7,0.9,3.6,0.4l5.4-3.1C668,105.9,666.8,105.8,665.3,104.9z"/>
-										<path class="st2" d="M665.5,81.1c-3.4-2-6.3-2.2-8.3-1l-5.4,3.1c2.1-1.2,4.9-1,8.3,1c7.5,4.3,11.6,13.1,11.5,20.9
-											c0,4.7-1.3,7.7-3.5,9l5.4-3.1c2.2-1.3,3.5-4.3,3.5-9C677.1,94.2,673,85.4,665.5,81.1z"/>
-										<g>
-											<path class="st3" d="M660.1,84.2c7.5,4.3,11.6,13.1,11.5,20.9c0,9.2-4.9,11.9-12,7.8c-7.2-4.2-11.4-12.9-11.4-20.9
-												C648.3,83.7,652.9,80.1,660.1,84.2z M660,108.1c3.7,2.1,5.9-0.7,5.9-6.1c0-5-2.1-10.6-5.9-12.8c-3.7-2.2-5.9,0.7-5.9,6.1
-												C654,100.8,656.3,105.9,660,108.1"/>
-										</g>
-									</g>
-									<g class="st0">
-										<path class="st2" d="M688.2,118C688.1,118,688.1,118,688.2,118c-0.8-0.5-1.5-0.9-2-1.3l-5.4,3.1c0.5,0.4,1.2,0.8,1.9,1.2
-											c0,0,0.1,0,0.1,0.1c2.5,1.4,4.5,1.8,6,1l5.4-3.1C692.7,119.9,690.7,119.5,688.2,118z"/>
-										<g>
-											<polygon class="st2" points="680.8,101.6 686.2,98.4 686.2,116.8 680.8,119.9 						"/>
-										</g>
-										<path class="st2" d="M698.1,103.2c-2.3-3.4-5.3-6.1-10-8.8c-2.8-1.6-5.4-2.9-7.5-3.7l-5.4,3.1c2,0.8,4.7,2.1,7.5,3.7
-											c4.6,2.7,7.6,5.4,10,8.8c2.5,3.6,4.1,8,4.1,12.9c0,4.8-1.4,7.5-3.4,8.7l5.4-3.1c2-1.2,3.4-3.8,3.4-8.7
-											C702.2,111.2,700.6,106.8,698.1,103.2z"/>
-										<g>
-											<path class="st3" d="M692.7,106.3c2.5,3.6,4.1,8,4.1,12.9c0,5.4-1.7,8.1-4.1,9c-2.6,1-6.5-0.1-11.3-2.9c-2.9-1.6-4.9-3-6.3-4
-												l0.1-27.5c2,0.8,4.7,2.1,7.5,3.7C687.4,100.2,690.4,102.9,692.7,106.3z M682.8,121.2c4.9,2.8,8.2,1.5,8.2-5.1
-												c0.1-5.8-2.9-10.6-7.6-13.3c-1.2-0.7-2-1-2.5-1.2l-0.1,18.3C681.2,120.3,682,120.7,682.8,121.2
-												C682.7,121.1,682.8,121.2,682.8,121.2"/>
-										</g>
-									</g>
-									<g class="st0">
-										<g>
-											<polygon class="st2" points="706,111.2 711.4,108.1 711.3,136.1 705.9,139.2 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="700.5,108 705.9,104.9 711.4,108.1 706,111.2 						"/>
-										</g>
-										<g>
-											<polygon class="st3" points="706,111.2 705.9,139.2 700.4,136 700.5,108 						"/>
-										</g>
-									</g>
-									<g class="st0">
-										<g>
-											<polygon class="st3" points="726.2,142.7 731.6,139.6 731.7,139.7 726.3,142.8 						"/>
-										</g>
-										<path class="st2" d="M721,121l-5.4,3.1c0.1,3.8,0.2,7.8,0.2,12.3l0,8.4l5.4-3.1l0-8.4C721.2,128.7,721.1,124.7,721,121z"/>
-										<path class="st2" d="M727.6,127.7l-5-13.2l-5.4,3.1l5,13.2c1.4,3.8,2.9,8.1,4,11.9l5.4-3.1
-											C730.5,135.8,729.1,131.5,727.6,127.7z"/>
-										<g>
-											<polygon class="st2" points="710.8,113.9 716.2,110.8 722.6,114.5 717.2,117.7 						"/>
-										</g>
-										<g>
-											<path class="st3" d="M731,125.6l-0.1,28l-5.8-3.3l-5.2-13.8c-1.4-3.8-3-8.4-4.2-12.3l-0.1,0c0.1,3.8,0.2,7.8,0.2,12.3l0,8.4
-												l-5.1-2.9l0.1-28l6.4,3.7l5,13.2c1.4,3.8,2.9,8.1,4,11.9l0.1,0.1c-0.3-3.9-0.4-7.7-0.4-11.9l0-8.2L731,125.6z"/>
-										</g>
-										<g>
-											<polygon class="st2" points="731,125.6 736.3,122.5 736.3,150.5 730.9,153.6 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="725.9,122.7 731.3,119.5 736.3,122.5 731,125.6 						"/>
-										</g>
-									</g>
-									<g class="st0">
-										<g>
-											<path class="st2" d="M742.4,139.7l5.4-3.1c-1.3,0.8-2.1,2.5-2.1,5.3c0,5.8,3.1,11,7.6,13.6c1.3,0.7,2.3,1.2,2.7,1.1l-5.4,3.1
-												c-0.4,0-1.4-0.4-2.7-1.1c-4.5-2.6-7.7-7.8-7.6-13.6C740.4,142.2,741.1,140.5,742.4,139.7z"/>
-										</g>
-										<g>
-											<polygon class="st2" points="747,146.8 752.4,143.7 761.4,148.9 756,152.1 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="756,152.1 761.4,148.9 761.4,163.7 756,166.8 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="755.3,140.7 760.7,137.6 759.5,142 754.1,145.1 						"/>
-										</g>
-										<path class="st2" d="M753.9,132.3c-4.3-2.5-8-3.1-10.5-1.6l-5.4,3.1c2.5-1.5,6.2-0.9,10.5,1.6c3.1,1.8,5.6,3.9,6.8,5.3l5.4-3.1
-											C759.5,136.2,757.1,134.1,753.9,132.3z"/>
-										<g>
-											<path class="st3" d="M748.5,135.4c3.1,1.8,5.6,3.9,6.8,5.3l-1.2,4.4c-1.3-1.4-3-2.9-5.7-4.5c-4.6-2.6-8.1-1.7-8.1,4.4
-												c0,5.8,3.1,11,7.6,13.6c1.3,0.7,2.3,1.2,2.7,1.1l0-5.9l-3.8-2.2l0-4.9l9.1,5.2l0,14.8c-1.7-0.3-4.9-1.3-8.1-3.1
-												c-4.4-2.6-7.7-5.7-9.9-9.5c-2.2-3.7-3.5-8.1-3.4-12.2C734.6,132.8,740.5,130.8,748.5,135.4z"/>
-										</g>
-									</g>
-								</g>
+								<!-- 코딩이미지 -->
 								<line class="st25" x1="644.3" y1="71.3" x2="644.3" y2="36"/>
 								<line class="st25" x1="754.3" y1="135.3" x2="754.3" y2="100"/>
 							</g>
@@ -1386,203 +1285,9 @@
 								</g>
 							</g>
 							<g class="uxtitle">
-								<g>
-									<g class="st0">
-										<g>
-											<polygon class="st3" points="203.1,164.5 203.1,193.1 197.5,196.4 197.4,167.8 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="197.5,196.4 191.6,193 191.5,164.4 197.4,167.8 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="197.4,167.8 191.5,164.4 197.2,161.1 203.1,164.5 						"/>
-										</g>
-									</g>
-									<g class="st0">
-										<path class="st2" d="M186.9,173.8l-5.9-3.4l0,16.5c0,5.1-1.6,8.4-4.6,10.1c-1.2,0.7-2.2,0.8-2.9,0.4l5.9,3.4
-											c0.7,0.4,1.7,0.3,2.9-0.4c3-1.7,4.6-5,4.6-10.1L186.9,173.8z"/>
-										<g>
-											<polygon class="st2" points="186.9,173.8 181,170.4 186.7,167.2 192.5,170.6 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="172.2,182.4 166.3,178.9 171.9,175.7 177.8,179.1 						"/>
-										</g>
-										<path class="st2" d="M172.2,198.3l0-16l-5.9-3.4l0,16c0,4.7,1,7.5,2.9,8.6l5.9,3.4C173.2,205.8,172.2,203.1,172.2,198.3z"/>
-										<g>
-											<path class="st3" d="M192.5,170.6l0,16.1c0,8.8-3.8,15.3-10.3,19c-6.3,3.6-10,1.8-10-7.4l0-16l5.7-3.3l0,16.5
-												c0,4.9,1.6,6.5,4.5,4.8c3-1.7,4.6-5,4.6-10.1l0-16.5L192.5,170.6z"/>
-										</g>
-									</g>
-									<g class="st0">
-										<g>
-											<path class="st3" d="M165.4,207.5c2-1.1,3.3-0.3,3.3,2.1c0,2.2-1.3,4.7-3.3,5.8c-1.9,1.1-3.3,0.2-3.3-2
-												C162.1,211.1,163.4,208.7,165.4,207.5z"/>
-										</g>
-										<path class="st2" d="M161.9,203.8c-0.6-0.3-1.4-0.3-2.3,0.3c-2,1.1-3.3,3.6-3.3,5.9c0,1.1,0.4,1.9,1,2.3l5.9,3.4
-											c-0.6-0.4-1-1.1-1-2.3c0-2.3,1.4-4.7,3.3-5.9c1-0.6,1.8-0.6,2.3-0.3L161.9,203.8z"/>
-									</g>
-									<g class="st0">
-										<g>
-											<polygon class="st3" points="153.1,222 147.3,218.6 145,214.7 150.9,218.1 						"/>
-										</g>
-										<g>
-											<path class="st3" d="M150.9,218.1l-5.9-3.4c-0.9-1.5-1.5-2.6-2.2-3.9l5.9,3.4C149.3,215.5,149.9,216.7,150.9,218.1z"/>
-										</g>
-										<g>
-											<polygon class="st2" points="138.2,230.6 132.3,227.2 139.5,208.6 145.3,212 						"/>
-										</g>
-										<g>
-											<polygon class="st3" points="148.9,205.8 143,202.4 143.1,202.3 149,205.7 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="152.8,193.6 146.9,190.1 153.3,186.4 159.2,189.8 						"/>
-										</g>
-										<path class="st2" d="M146.9,190.1l-2.1,6.4c-0.6,2-1.1,3.6-1.7,5.7l5.9,3.4c0.6-2.2,1.1-3.7,1.7-5.7l2.1-6.4L146.9,190.1z"/>
-										<g>
-											<polygon class="st2" points="138.4,201.9 132.5,198.5 138.9,194.7 144.8,198.1 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="145.3,212 139.5,208.6 132.5,198.5 138.4,201.9 						"/>
-										</g>
-										<g>
-											<path class="st3" d="M159.2,189.8l-7,18l7.4,10.4l-6.5,3.8l-2.3-3.9c-0.9-1.5-1.5-2.6-2.2-3.9l-0.1,0c-0.5,2-1.1,3.8-1.9,6.2
-												l-2.1,6.4l-6.4,3.7l7.2-18.6l-7-10.1l6.5-3.7l2.2,4c0.7,1.3,1.3,2.4,1.9,3.7l0.1,0c0.6-2.2,1.1-3.7,1.7-5.7l2.1-6.4
-												L159.2,189.8z"/>
-										</g>
-									</g>
-									<g class="st0">
-										<path class="st2" d="M129.4,207l-5.9-3.4l0,16.5c0,5.1-1.6,8.4-4.6,10.1c-1.2,0.7-2.2,0.8-2.9,0.4l5.9,3.4
-											c0.7,0.4,1.7,0.3,2.9-0.4c3-1.7,4.6-5,4.6-10.1L129.4,207z"/>
-										<g>
-											<polygon class="st2" points="129.4,207 123.6,203.6 129.2,200.4 135.1,203.8 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="114.7,215.5 108.8,212.1 114.5,208.9 120.4,212.3 						"/>
-										</g>
-										<path class="st2" d="M114.8,231.5l0-16l-5.9-3.4l0,16c0,4.7,1,7.5,2.9,8.6l5.9,3.4C115.8,239,114.8,236.2,114.8,231.5z"/>
-										<g>
-											<path class="st3" d="M135.1,203.8l0,16.1c0,8.8-3.8,15.3-10.3,19c-6.3,3.6-10,1.8-10-7.4l0-16l5.7-3.3l0,16.5
-												c0,4.9,1.6,6.5,4.5,4.8c3-1.7,4.6-5,4.6-10.1l0-16.5L135.1,203.8z"/>
-										</g>
-									</g>
-									<g class="st0">
-										<g>
-											<polygon class="st3" points="332.4,110.2 326.5,106.8 326.6,106.7 332.5,110.1 						"/>
-										</g>
-										<path class="st2" d="M332,98.5l0-8.4l-5.9-3.4l0,8.4c0,4.3,0.1,8.1,0.5,11.7l5.9,3.4C332.1,106.5,332,102.7,332,98.5z"/>
-										<g>
-											<polygon class="st2" points="332,90.1 326.1,86.7 331.3,83.7 337.2,87.1 						"/>
-										</g>
-										<path class="st2" d="M326,111.2c-1.5-2.2-3.1-5-4.4-7.6l-5.9-3.4c1.2,2.7,2.9,5.4,4.4,7.6l5.4,8l5.9,3.4L326,111.2z"/>
-										<g>
-											<polygon class="st2" points="316.5,99 310.7,95.6 317.2,91.8 323.1,95.2 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="316.6,127.6 310.7,124.2 310.7,95.6 316.5,99 						"/>
-										</g>
-										<g>
-											<path class="st3" d="M337.2,87.1l0.1,28.6l-5.9,3.4l-5.4-8c-1.5-2.2-3.1-5-4.4-7.6l-0.1,0.1c0.2,3.7,0.2,7.7,0.3,12.4l0,8.6
-												l-5.2,3L316.5,99l6.6-3.8l5.2,7.5c1.5,2.2,3,4.9,4.1,7.5l0.1-0.1c-0.4-3.6-0.5-7.4-0.5-11.7l0-8.4L337.2,87.1z"/>
-										</g>
-									</g>
-									<g class="st0">
-										<g>
-											<polygon class="st2" points="306.8,128 300.9,124.5 300.9,118.5 306.8,122 						"/>
-										</g>
-										<g>
-											<path class="st2" d="M298.4,130.8l-5.9-3.4c1.4,0.8,3.3,0.5,5.6-0.8c1.3-0.7,2.3-1.5,2.8-2l5.9,3.4c-0.4,0.5-1.5,1.3-2.8,2
-												C301.7,131.3,299.7,131.6,298.4,130.8z"/>
-										</g>
-										<g>
-											<polygon class="st2" points="302.9,124.2 297,120.8 297,115.7 302.9,119.1 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="302.9,119.1 297,115.7 306.3,110.4 312.2,113.8 						"/>
-										</g>
-										<g>
-											<path class="st2" d="M304.4,105.7l-5.9-3.4c3.2-1.9,5.7-2.6,6.9-2.6l5.9,3.4C310.1,103.1,307.6,103.8,304.4,105.7z"/>
-										</g>
-										<g>
-											<path class="st3" d="M304.4,105.7c3.2-1.9,5.7-2.6,6.9-2.6l-1.2,5.9c-1.4,0.1-3.1,0.5-5.8,2.1c-4.7,2.7-8.2,7.8-8.2,14
-												c0,5.9,3.2,7.5,7.9,4.9c1.3-0.7,2.3-1.5,2.8-2l0-6l-3.8,2.2l0-5.1l9.3-5.4l0,15.1c-1.7,1.7-5,4.5-8.3,6.4
-												c-4.5,2.6-7.8,3.2-10.1,2c-2.3-1.1-3.6-4.1-3.5-8.4C290.2,119.3,296.2,110.4,304.4,105.7z"/>
-										</g>
-										<g>
-											<path class="st2" d="M293.5,137.1l-5.9-3.4c-2.1-1.2-3.3-4.2-3.3-8.2c0-9.5,6-18.4,14.2-23.2l5.9,3.4
-												c-8.2,4.7-14.2,13.6-14.2,23.2C290.2,132.9,291.4,135.9,293.5,137.1z"/>
-										</g>
-									</g>
-									<g class="st0">
-										<g>
-											<polygon class="st3" points="286.5,116.4 286.5,145 280.9,148.3 280.8,119.6 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="280.9,148.3 275,144.8 274.9,116.2 280.8,119.6 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="280.8,119.6 274.9,116.2 280.6,113 286.5,116.4 						"/>
-										</g>
-									</g>
-									<g class="st0">
-										<g>
-											<polygon class="st2" points="260,159 254.1,155.6 255.2,149.6 261.1,153 						"/>
-										</g>
-										<g>
-											<path class="st2" d="M264.7,140.8l5.9,3.4c0.5,0.3,0.7,0.8,0.7,1.5c0,1.9-1.4,3.9-3.9,5.4c-2.4,1.4-4.7,1.8-6.3,1.8l-5.9-3.4
-												c1.5,0,3.8-0.4,6.3-1.8c2.6-1.5,4-3.5,3.9-5.4C265.4,141.6,265.2,141.1,264.7,140.8z"/>
-										</g>
-										<g>
-											<path class="st2" d="M266.6,137.2l-5.9-3.4c0.7,0.4,2,0.3,4,0c2-0.3,3.5-0.2,4.6,0.4l5.9,3.4c-1.1-0.6-2.6-0.8-4.6-0.4
-												C268.6,137.5,267.2,137.6,266.6,137.2z"/>
-										</g>
-										<g>
-											<path class="st2" d="M269.6,125.6l-5.9-3.4c2.8-1.6,4.9-2.1,6.4-2.2l5.9,3.4C274.5,123.5,272.5,124,269.6,125.6z"/>
-										</g>
-										<g>
-											<path class="st2" d="M262.1,143.8l-5.9-3.4c-1.2-0.7-1.9-2-1.9-4.1c0-4.9,3.5-10.7,9.4-14.1l5.9,3.4
-												c-5.9,3.4-9.4,9.2-9.4,14.1C260.2,141.8,260.9,143.1,262.1,143.8z"/>
-										</g>
-										<g>
-											<path class="st3" d="M269.6,125.6c2.8-1.6,4.9-2.1,6.4-2.2l-1.2,5.9c-1,0-2.8,0.2-5.2,1.6c-2.4,1.4-3.6,3.4-3.6,4.9
-												c0,1.8,1.4,1.8,4.6,1.4c4.4-0.7,6.5,0.8,6.5,4.8c0,4.8-3.2,10.7-10,14.7c-2.8,1.6-5.7,2.4-7.1,2.3l1.1-6
-												c1.5,0,3.8-0.4,6.3-1.8c2.6-1.5,4-3.5,3.9-5.4c0-1.8-1.2-2.1-4.2-1.6c-4.1,0.7-6.8-0.3-6.9-4.5
-												C260.2,134.8,263.8,129,269.6,125.6z"/>
-										</g>
-									</g>
-									<g class="st0">
-										<g>
-											<polygon class="st2" points="246.8,162.6 241,159.2 251.2,153.3 257.1,156.7 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="246.8,150.5 240.9,147.1 250.1,141.8 256,145.2 						"/>
-										</g>
-										<g>
-											<polygon class="st3" points="256.5,133.7 256.5,139 246.8,144.6 246.8,150.5 256,145.2 256,150.5 246.8,155.8 246.8,162.6 
-												257.1,156.7 257.1,162 241.2,171.2 241.1,142.5 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="241.2,171.2 235.3,167.8 235.2,139.1 241.1,142.5 						"/>
-										</g>
-										<g>
-											<polygon class="st2" points="241.1,142.5 235.2,139.1 250.6,130.3 256.5,133.7 						"/>
-										</g>
-									</g>
-									<g class="st0">
-										<path class="st2" d="M229.4,156.4l-5.9-3.4c1.3,0.8,2.1,2.6,2,5.5c0,6.8-3.3,11.9-8.3,14.8c0,0-0.1,0-0.1,0.1
-											c-0.7,0.4-1.5,0.9-2,1l5.9,3.4c0.5-0.2,1.3-0.6,2-1c0,0,0.1,0,0.1-0.1c5-2.9,8.3-8,8.3-14.8C231.5,159,230.8,157.2,229.4,156.4
-											z"/>
-										<g>
-											<path class="st3" d="M233.2,150c2.6,0.7,4.2,3.3,4.2,8.4c0,5.5-1.7,10.3-4.1,14c-2.6,4-6.6,7.5-11.5,10.3
-												c-2.9,1.7-5,2.7-6.4,3.3l-0.1-28.1c2.1-1.6,4.8-3.3,7.6-5C227.7,150.1,230.8,149.3,233.2,150z M231.5,162c0-6-3-7.4-7.9-4.6
-												c-1.3,0.7-2.1,1.3-2.5,1.7l0.1,18.7c0.5-0.2,1.3-0.6,2-1c0,0,0.1,0,0.1-0.1C228.2,173.9,231.5,168.8,231.5,162"/>
-										</g>
-										<g>
-											<polygon class="st2" points="215.5,185.9 209.6,182.5 209.5,154.4 215.4,157.8 						"/>
-										</g>
-										<path class="st2" d="M228.5,147c-0.4-0.2-0.7-0.4-1.2-0.5c-2.4-0.7-5.5,0.1-10.2,2.8c-2.8,1.6-5.5,3.4-7.6,5l5.9,3.4
-											c2.1-1.6,4.8-3.3,7.6-5c4.7-2.7,7.8-3.5,10.2-2.8c0.4,0.1,0.8,0.3,1.2,0.5L228.5,147z"/>
-									</g>
-								</g>
+								<!-- 프로그래밍 이미지 넣기 -->
+								<path class="st47" d="M315.7,551.1c-3.7,0-8.1-7.7-7.8-14.1c0.3-6.4,2.7-13.9,8.8-13.9c6.1,0,7.6,6.7,7.8,12.8
+										C324.5,542,320,551.1,315.7,551.1z"/>
 								<line class="st46" x1="114.7" y1="212.2" x2="114.7" y2="176.9"/>
 								<line class="st46" x1="331.7" y1="86.5" x2="331.7" y2="51.1"/>
 							</g>
