서브2_상단완료
css 및 코멘트

--- a/html/sub4.html
+++ b/html/sub4.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="keyim">
 	<meta name="description" content="포트폴리오 사이트입니다.">
 	<meta name="keywords" content="웹퍼블리셔,웹표준,웹접근성">
-	
+	<!-- 포트폴리오 정리 페이지 -->
 	<title>Portfolio Site</title>
   
 	<!-- Style-->
@@ -473,7 +473,7 @@
 			<ul>
 				<li class="menu-tit">&diams; NAVIGATION &diams;</li>
 				<li class="menu-sub"><a href="sub4.html">Portfolio</a></li>
-				<li class="menu-sub"><a href="sub2-4.html">About</a></li>
+				<li class="menu-sub"><a href="sub2-4.html">About Me</a></li>
 				<li class="menu-sub"><a href="sub3.html">Contact</a></li>
 			</ul>
 		</div>
