--- a/html/2.html
+++ b/html/2.html
@@ -4,12 +4,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="keyim">
+	<meta name="author" content="Jeffrey">
 	<meta name="description" content="포트폴리오 사이트입니다.">
-	<meta name="keywords" content="웹퍼블리셔,웹표준,웹접근성">
+	<meta name="keywords" content="웹개발, 스프링, 하이브리드, 안드로이드">
 	
 	<title>Portfolio Site</title>
-  
+  	<!-- 햄버거매뉴_완료 -->
 	<!-- Style-->
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style-sub.css">
@@ -19,8 +19,7 @@
 
 	<!-- Webfont-->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600,400,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
-	<link href="http://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
 	
 	<style>
 		.menupage{
@@ -31,24 +30,24 @@
 		.menu-tit {
 			font-family: 'Open Sans', sans-serif;
 			font-weight: 700;
-			font-size: 16px;
+			font-size: 20px;
 			letter-spacing:3px;
-			color:#F97070;
+			color:#111111;
 		}
 		
-		.right-menu .menu-tit {color:#F97070;}
+		.right-menu .menu-tit {color:#111111;}
 		
 		.left-menu{
 			width:50%;
 			height:100vh;
 			float:left;
-			background-color:#403D66;
+			background-color:#0C4C8A ;
 		}
 		
 		.left-menu ul{
 			position:absolute; left:25%; top:40%; transform: translate3d(-50%,-50%,0);
-			font-family: 'Playfair Display', serif;
-			font-size: 34px;
+			font-family: 'noto sans kr', serif;
+			font-size: 30px;
 			font-weight: 400;
 			line-height: 60px;
 			color:#fff;
@@ -57,12 +56,12 @@
 			width:50%;
 			height:100vh;
 			float:left;
-			background-color:#525177;
+			background-color:#5587A2;
 		}
 	
 		.right-menu ul{
 			position:absolute; left:75%; top:40%; transform: translate3d(-50%,-50%,0);
-			font-family: 'Playfair Display', serif;
+			font-family: 'noto sans kr' , serif;
 			font-size: 34px;
 			font-weight: 400;
 			line-height: 60px;
@@ -125,7 +124,7 @@
 	<div class="menupage">
 		<div class="left-menu">
 			<ul>
-				<li class="menu-tit">&diams; contact &diams;</li>
+				<li class="menu-tit">&diams; CONTECT &diams;</li>
 				<li>cfpjeffrey@gmail.com</li>
 				<li>
 				<div class="pdf">
@@ -139,7 +138,7 @@
 			<ul>
 				<li class="menu-tit">&diams; Navigation &diams;</li>
 				<a href="sub4.html"><li>Portfolio</li></a>
-				<a href="sub2.html"><li>About</li></a>
+				<a href="sub2.html"><li>About Me</li></a>
 				<a href="sub3.html"><li>Contact</li></a>
 			</ul>
 		</div>
