--- a/html/sub2.html
+++ b/html/sub2.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="keyim">
+  <meta name="author" content="Jeffrey">
   <meta name="description" content="포트폴리오 사이트입니다.">
-  <meta name="keywords" content="웹퍼블리셔,웹표준,웹접근성">
-  
+  <meta name="keywords" content="웹개발, 스프링, 하이브리드, 안드로이드">
+  <!-- 나의 스킬소개 페이지_ -->
   <title>Portfolio Site</title>
   <!-- Style-->
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style1.css">
-	<link rel="stylesheet" href="assets/css/mediaquery.css">
+  <link rel="stylesheet" href="assets/css/mediaquery.css">
+
 
   <!-- favicon-->
  
@@ -19,143 +20,133 @@
   <!-- Webfont-->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
-	<link href="http://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet">
+ 
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
 	
 
 </head>
 <body>
 <div class="contents">
 	<div id="section0-1">
-		<span class="scroll-btn">
-			<a href="#">
-				<span class="mouse">
-					<span>
+		
+
+		<div class="sub-main">
+			<div>
+				<!-- 로켓 svg -->
+				<svg style="max-width:70px; transform:translate3d(10%,20%,0);" xmlns="http://www.w3.org/2000/svg"
+					xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
+					viewBox="0 0 29 29" xml:space="preserve">
+					<style type="text/css">
+						.st0 {
+							fill: none;
+							stroke: #000000;
+							stroke-miterlimit: 10;
+						}
+
+						.st1 {
+							fill: none;
+							stroke: #000000;
+							stroke-width: 2;
+							stroke-miterlimit: 10;
+						}
+
+						.st2 {
+							fill: none;
+							stroke: #000000;
+							stroke-width: 2;
+							stroke-linecap: round;
+							stroke-linejoin: round;
+							stroke-miterlimit: 10;
+						}
+					</style>
+					<path
+						d="M26.49 2.51s-8.979-.021-15.979 6.979a7.72 7.72 0 0 0-.86 1.037c-1.241-.099-3.143-.063-4.113.909-2.27 2.27-3.027 6.054-3.027 6.054l5.294-.756v1.462l3 3h1.462l-.757 5.295s3.784-.757 6.054-3.027c.971-.971 1.007-2.872.909-4.113a7.645 7.645 0 0 0 1.037-.86c7-7 6.98-15.98 6.98-15.98zm-9.98 7.98a2 2 0 1 1 3.999-.001 2 2 0 0 1-3.999.001z" />
+					<path
+						d="M8.558 22.206c-.919.919-2.084.316-2.084.316s-.568-1.2.316-2.084c.076-.076.169-.119.258-.171l-.615-.615c-.321.11-.624.284-.88.54-.898.898-.846 4.097-.846 4.097s3.2.051 4.097-.846c.256-.256.43-.559.54-.88l-.614-.614c-.053.088-.096.181-.172.257z" />
+
+				</svg>
+
+				<span class="about-title">About Me</span>
+				<div class="about-me">
+					<h2> 함께 일하고 싶은 개발자 </h2>
+					<p> 웹 어플리케이션 개발자가 되기 위해 개발자과정을 수료했습니다. <br/> 아울러 도서, 구글링, Youtube 등의 도구를 활용해 개발자 역량을 높이고 발전하고 있습니다.<br/>
+						이후로도 꾸준히 학습하고, '함께 일하고 싶은 개발자'로 동료들에게 신뢰를 주고 싶습니다.</p>
+				</div>
+				<br>
+				<span class="sub-work">
+					Skills
+
+					<span class="scroll-btn" >
+						<a href="#">
+							<span class="mouse">
+								<span>
+								</span>
+							</span>
+						</a>
 					</span>
 				</span>
-			</a>
-		</span>
-    
-			<svg style="max-width:1200px; position:relative; left:50%; top:50%; transform:translate3d(-50%,-50%,0)" version="1.1" id="layer1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-	 y="0px" viewBox="0 0 946 602" style="enable-background:new 0 0 946 602;" xml:space="preserve">
-<style type="text/css">
-	.st0{enable-background:new    ;}
-	.st1{fill:#F4CF7A;}
-	.st2{fill:#FFE7B0;}
-	.st3{fill:#389606;}
-	.st4{fill:none;stroke:#95CAD1;stroke-miterlimit:10;}
-	.st5{opacity:0.1;}
-</style>
-<g>
-	<g class="st0">
-		<path class="st1" d="M485.9,221.7c-24.5,35.8-43.8,61.3-67.4,92.5l-0.1,40.8c23.6-31.2,42.9-56.7,67.4-92.5l81.4-118l0.1-40.8
-			L485.9,221.7z"/>
-		<g>
-			<polygon class="st1" points="143.7,545.6 143.6,586.4 9,508.7 9.2,468 			"/>
-		</g>
-		<polygon class="st1" points="390.7,402.1 143.7,545.6 143.6,586.4 390.6,442.8 932.6,355.4 932.7,314.7 		"/>
-		<g>
-			<path class="st2" d="M932.7,314.7l-542,87.4L143.7,545.6L9.2,468l242.7-141L413.3,14.8l154,88.9l-81.4,118
-				c-24.5,35.8-43.8,61.3-67.4,92.5l1.8,1c50.2-13.8,98.7-25.5,158.6-39.9l202.6-48L932.7,314.7z"/>
-		</g>
-	</g>
-</g>
-</svg>
+			</div>
 
-<div class="sub-main">      
-	<svg style="max-width:50px; transform:translate3d(0%,20%,0);" version="1.1" xmlns="http://www.w3.org/2000/svg" version="1.1" id="layer2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-	 y="0px" viewBox="0 0 35 54" style="enable-background:new 0 0 35 54;" xml:space="preserve">
 
-<g>
-	<polygon class="st3" points="18.7,21.6 9.2,21.6 13.9,13.4 18.7,5.2 23.4,13.4 28.2,21.6 	"/>
-	<polygon class="st3" points="18.7,30.6 7,30.6 12.8,20.2 18.7,9.9 24.5,20.3 30.4,30.6 	"/>
-	<line class="st4" x1="17.8" y1="14.6" x2="17.8" y2="46.6"/>
-	<polyline class="st4" points="14.4,16.9 17.8,20.7 21.7,15.7 	"/>
-	<polyline class="st4" points="14.4,24.9 17.8,28.7 21.7,25.4 	"/>
-	<ellipse class="st5" cx="17.8" cy="46.5" rx="6.8" ry="3"/>
-</g>
-</svg>
-
-	<span class="work">ABOUT</span>
-		<svg style="max-width:50px; transform:translate3d(0%,20%,0);" version="1.1" xmlns="http://www.w3.org/2000/svg" version="1.1" id="layer2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-	 y="0px" viewBox="0 0 35 54" style="enable-background:new 0 0 35 54;" xml:space="preserve">
-
-<g>
-	<polygon class="st3" points="18.7,21.6 9.2,21.6 13.9,13.4 18.7,5.2 23.4,13.4 28.2,21.6 	"/>
-	<polygon class="st3" points="18.7,30.6 7,30.6 12.8,20.2 18.7,9.9 24.5,20.3 30.4,30.6 	"/>
-	<line class="st4" x1="17.8" y1="14.6" x2="17.8" y2="46.6"/>
-	<polyline class="st4" points="14.4,16.9 17.8,20.7 21.7,15.7 	"/>
-	<polyline class="st4" points="14.4,24.9 17.8,28.7 21.7,25.4 	"/>
-	<ellipse class="st5" cx="17.8" cy="46.5" rx="6.8" ry="3"/>
-</g>
-</svg>
-		<br>
-		<span>Chracteristic <br>
-			Skills<br>
-			Resume<br>
-		</span>
 		</div>
 	</div>
 
 	<div id="section1-1">
 		<div class="sub-main1">
-			<span class="title">Skills<br>
+			<span class="title">Launage<br>
 				<p></p>
 			</span>
 		</div>
-		
-	
-	<div class="my-skills">
-		<div class="cont">
-		<div class="skills">
-			<h2> My skills</h2>
-			<p> Welcome .
-			I’m UX/UI designer / Web Publisher Kyoung Eun Yim.
-			I Mohammed
-			Student at the Faculty of Science, I am learning web design, web development
-			My experience in this area is not great but I'm trying to improve it
-			And I'm trying to learn all that is new </p>
-			<a href="https://www.facebook.com/khatabovic" target="_blank"><button>contact me</button></a>
-		</div>
-		<div class="progress">
-			<div class="tec">
-				<h3>Illustrator</h3>
-					<div>
-					<span>80% &nbsp;</span>
-					</div>
 
-					<h3>Photoshop</h3>
-					<div>
-					<span class="one">75% &nbsp;</span>
-					</div>
 
-					<h3>InDesign</h3>
-					<div>
-					<span class="two"> 55% &nbsp;</span>
-					</div>
+		<div class="my-skills">
+			<div class="cont">
+				<div class="skills">
+					<h2> My skills</h2>
+					<p> Welcome .
+						I’m UX/UI designer / Web Publisher Kyoung Eun Yim.
+						I Mohammed
+						Student at the Faculty of Science, I am learning web design, web development
+						My experience in this area is not great but I'm trying to improve it
+						And I'm trying to learn all that is new </p>
+					<a href="https://www.facebook.com/khatabovic" target="_blank"><button>contact me</button></a>
+				</div>
+				<div class="progress">
+					<div class="tec">
+						<h3>Illustrator</h3>
+						<div>
+							<span>80% &nbsp;</span>
+						</div>
 
-					<h3>HTML / CSS</h3>
-					<div>
-					<span class="three">43% &nbsp;</span>
-					</div>
-				
-					<h3>jQuery / Javascript</h3>
-					<div>
-					<span class="three">43% &nbsp;</span>
+						<h3>Photoshop</h3>
+						<div>
+							<span class="one">75% &nbsp;</span>
+						</div>
+
+						<h3>InDesign</h3>
+						<div>
+							<span class="two"> 55% &nbsp;</span>
+						</div>
+
+						<h3>HTML / CSS</h3>
+						<div>
+							<span class="three">43% &nbsp;</span>
+						</div>
+
+						<h3>jQuery / Javascript</h3>
+						<div>
+							<span class="three">43% &nbsp;</span>
+						</div>
 					</div>
 				</div>
+			</div>
 		</div>
-
-		</div>
-</div>	
-		
-
 	</div>
+</div>
 	
 	<!-- script -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> 
-	<script>
-	s
-	</script>
+
   </body>
 </html>
