서브3 중간완료
123

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="keyim">
-  <meta name="description" content="포트폴리오 사이트입니다.">
-  <meta name="keywords" content="웹퍼블리셔,웹표준,웹접근성">
-  
+	<meta name="author" content="Jeffrey">
+	<meta name="description" content="포트폴리오 사이트입니다.">
+	<meta name="keywords" content="웹개발, 스프링, 하이브리드, 안드로이드">
+	<!-- 인덱스_페이지_작업중 -->
 	<title>Portfolio Site</title>
 	
 	<!-- Style-->
@@ -4829,7 +4829,7 @@
 		
     <div class="about">
 			 
-      <a href ="html/sub2-4.html"><svg style="max-width:280px; position:relative; left:50%; top:50%; transform:translate3d(-50%,-50%,0)" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <a href ="html/sub2.html"><svg style="max-width:280px; position:relative; left:50%; top:50%; transform:translate3d(-50%,-50%,0)" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 						 viewBox="0 0 262 304" style="enable-background:new 0 0 262 304;" xml:space="preserve">
 					<g class="svg2">
 						<g>
@@ -5240,8 +5240,8 @@
 	
 	
 	
-	<div class="nav">
-		<a href="index.html"><img src="html/assets/img/logo.png" width="56"></a>
+	<div class="nav-logo">
+		<a href="index.html"><img src="html/assets/img/logo.png" width="70px"></a>
 	</div>
 	
 	<div class="nav2">
@@ -5264,7 +5264,7 @@
 				<ul>
 					<li class="menu-tit">&diams; NAVIGATION &diams;</li>
 					<li class="menu-sub"><a href="html/sub4.html">Portfolio</a></li>
-					<li class="menu-sub"><a href="html/sub2-4.html">About</a></li>
+					<li class="menu-sub"><a href="html/sub2.html">About Me</a></li>
 					<li class="menu-sub"><a href="html/sub3.html">Contact</a></li>
 				</ul>
 			</div>
