--- a/html/sub4.html
+++ b/html/sub4.html
@@ -473,7 +473,7 @@
 			<ul>
 				<li class="menu-tit">&diams; NAVIGATION &diams;</li>
 				<li class="menu-sub"><a href="sub4.html">Portfolio</a></li>
-				<li class="menu-sub"><a href="sub2-4.html">About Me</a></li>
+				<li class="menu-sub"><a href="sub2.html">About Me</a></li>
 				<li class="menu-sub"><a href="sub3.html">Contact</a></li>
 			</ul>
 		</div>
