기포폴정리
2 참고해서 네비쪽 바탕색 바꾸기 작업요함

--- a/html/hugme.html
+++ b/html/hugme.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="keyim">
+	<meta name="author" content="Jeffrey">
 	<meta name="description" content="포트폴리오 사이트입니다.">
-	<meta name="keywords" content="웹퍼블리셔,웹표준,웹접근성">
-	
+	<meta name="keywords" content="웹개발, 스프링, 하이브리드, 안드로이드">
+	<!-- 포폴 하나 일렬나열5 -->
 	<title>Portfolio Site</title>
   
 	<!-- Style-->
