--- a/html/sub3.html
+++ b/html/sub3.html
@@ -116,6 +116,7 @@
 							id="Fill-12" fill="#FFFFFE" />
 					</g>
 				</g>
+			</svg>
 	<span class="e-mail">cfpjeffrey@gmail.com <br>
 		<br>
 	</span>
@@ -127,40 +128,42 @@
 	</div>
 	</div>
 	
-	</div>
-	</div>
 	
-	<div class="nav">
-		<a href="../index.html"><img src="assets/img/logo.png" width="56"></a>
-	</div>
 	
-	<div class="nav2">
-		<div id="toggle">
-			<div class="one"></div>
-			<div class="two"></div>
-			<div class="three"></div>
+	
+	<div class="nav-logo">
+			<a href="../index.html"><img src="assets/img/logo.png" width="70px"></a>
 		</div>
 	
-		<div id="menu2">
-			<div class="menupage">
-				<div class="left-menu">
-					<ul>
-						<li class="menu-tit">&diams; CONTACT &diams;</li>
-						<li class="menu-sub"><a href="#">cfpjeffrey@gmail.com</a></li>
-						<li class="menu-sub1"><a href="./assets/img/portfolio.pdf">VIEW PORTFOLIO (PDF) ></a></li>
-					</ul>
-				</div>
-				<div class="right-menu">
-					<ul>
-						<li class="menu-tit">&diams; NAVIGATION &diams;</li>
-						<li class="menu-sub"><a href="html/sub4.html">Portfolio</a></li>
-						<li class="menu-sub"><a href="html/sub2.html">About Me</a></li>
-						<li class="menu-sub"><a href="html/sub3.html">Contact</a></li>
-					</ul>
+		<div class="nav2">
+			<div id="toggle">
+				<div class="one"></div>
+				<div class="two"></div>
+				<div class="three"></div>
+			</div>
+		
+			<div id="menu2">
+				<div class="menupage">
+					<div class="left-menu">
+						<ul>
+							<li class="menu-tit">&diams; CONTACT &diams;</li>
+							<li class="menu-sub3">cfpjeffrey@gmail.com</li>
+							<li class="menu-sub1"><a href="./assets/img/portfolio.pdf">VIEW PORTFOLIO (PDF)</a></li>
+						</ul>
+					</div>
+					<div class="right-menu">
+						<ul>
+							<li class="menu-tit">&diams; NAVIGATION &diams;</li>
+							<li class="menu-sub"><a href="./sub4.html">Portfolio</a></li>
+							<li class="menu-sub"><a href="./sub2.html">About Me</a></li>
+							<li class="menu-sub"><a href="./sub3.html">Contact</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 	
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
