--- a/index.html
+++ b/index.html
@@ -5256,7 +5256,7 @@
 			<div class="left-menu">
 				<ul>
 					<li class="menu-tit">&diams; CONTACT &diams;</li>
-					<li class="menu-sub"><a href="html/sub4.html">cfpjeffrey@gmail.com</a></li>
+					<li class="menu-sub3">cfpjeffrey@gmail.com</li>
 					<li class="menu-sub1"><a href="html/assets/img/portfolio.pdf">VIEW PORTFOLIO (PDF) ></a></li>
 				</ul>
 			</div>
