--- a/html/sub4.html
+++ b/html/sub4.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="keyim">
+	<meta name="author" content="Jeffrey">
 	<meta name="description" content="포트폴리오 사이트입니다.">
-	<meta name="keywords" content="웹퍼블리셔,웹표준,웹접근성">
+	<meta name="keywords" content="웹개발, 스프링, 하이브리드, 안드로이드">
 	<!-- 포트폴리오 정리 페이지 -->
 	<title>Portfolio Site</title>
   
@@ -428,8 +428,10 @@
 	<!-- section13 eq(13) -->
 </div>
 
+<div class="nav-logo">
+	<a href="../index.html"><img src="assets/img/logo.png" width="70px"></a>
+</div>
 <div class="nav">
-	<a href="../index.html"><img src="assets/img/logo.png" width="56"></a>
 	<div class="menu-box">
 		<div id="menu">
 			<ul>
@@ -461,23 +463,23 @@
 	</div>
 	
 	<div id="menu2">
-	  <div class="menupage">
-		<div class="left-menu">
-			<ul>
-				<li class="menu-tit">&diams; CONTACT &diams;</li>
-				<li class="menu-sub"><a href="sub4.html">keyim91@gmail.com</a></li>
-				<li class="menu-sub1"><a href="assets/img/">VIEW PORTFOLIO (PDF) ></a></li>
-			</ul>
+		<div class="menupage">
+			<div class="left-menu">
+				<ul>
+					<li class="menu-tit">&diams; CONTACT &diams;</li>
+					<li class="menu-sub3">cfpjeffrey@gmail.com</li>
+					<li class="menu-sub1"><a href="./assets/img/portfolio.pdf">VIEW PORTFOLIO (PDF)</a></li>
+				</ul>
+			</div>
+			<div class="right-menu">
+				<ul>
+					<li class="menu-tit">&diams; NAVIGATION &diams;</li>
+					<li class="menu-sub"><a href="html/sub4.html">Portfolio</a></li>
+					<li class="menu-sub"><a href="html/sub2.html">About Me</a></li>
+					<li class="menu-sub"><a href="html/sub3.html">Contact</a></li>
+				</ul>
+			</div>
 		</div>
-		<div class="right-menu">
-			<ul>
-				<li class="menu-tit">&diams; NAVIGATION &diams;</li>
-				<li class="menu-sub"><a href="sub4.html">Portfolio</a></li>
-				<li class="menu-sub"><a href="sub2.html">About Me</a></li>
-				<li class="menu-sub"><a href="sub3.html">Contact</a></li>
-			</ul>
-		</div>
-	  </div>
 	</div>
 </div>
 
