메인구성완료
123

--- a/index.html
+++ b/index.html
@@ -5138,7 +5138,7 @@
 			<a href ="html/sub4.html">
 				<div class="tit1">
 					<h2>PORTFOLIO</h2>
-					<h3>UX.UI Design &middot; Web Publishing &middot;<br> Product Design &middot; Other </h3>
+					<h3>JSP &middot; SPRING &middot; Android Programing<br>HTML &middot; CSS &middot; JavaScript &middot; Others </h3>
 				</div>
 			</a>
 			<button class="no-hover">VIEW</button>
