--- a/html/sub4.html
+++ b/html/sub4.html
@@ -474,9 +474,9 @@
 			<div class="right-menu">
 				<ul>
 					<li class="menu-tit">&diams; NAVIGATION &diams;</li>
-					<li class="menu-sub"><a href="html/sub4.html">Portfolio</a></li>
-					<li class="menu-sub"><a href="html/sub2.html">About Me</a></li>
-					<li class="menu-sub"><a href="html/sub3.html">Contact</a></li>
+					<li class="menu-sub"><a href="./sub4.html">Portfolio</a></li>
+					<li class="menu-sub"><a href="./sub2.html">About Me</a></li>
+					<li class="menu-sub"><a href="./sub3.html">Contact</a></li>
 				</ul>
 			</div>
 		</div>
