--- a/index.html
+++ b/index.html
@@ -5316,7 +5316,16 @@
 								</g>
 							</g>
 						</g>
+						<g id="cat" transform="matrix(0.5,0,0,0.5,170,170)">
+							<path d="M54.4 127.4c9.1 5.9 23.5 12.9 10.6 19.8-13.7 7.3-31.9-1.3-38.7-9.2-9.1-10.5-19.4-14-23.9-15.2-3.7-1-3.8-3.1 4.4-1.8 1.4.2 11.6 1.5 21.6 2.9 10.2 1.4 23.2 1.7 26 3.5z" opacity=".2" fill="#bb1616" class="color000 svgShape"></path>
+							<path fill="#f9eeee" d="M46.3 127.9s.8 2.9 2.8 4.1 6.1 3.4 6.5 4.3c.4.9 1.4 3 3.5 2.6 2.1-.4 4.8-2.2 4.1-3.5-.7-1.3-1.7-.9-3.8-1.4-2.1-.5-5.2-2.4-6-3.7-.9-1.3-1.7-4-1.7-4l-5.4 1.6z" class="color999 svgShape"></path>
+							<path d="M46.3 127.9s.8 2.9 2.8 4.1 6.1 3.4 6.5 4.3c.4.9 1.4 3 3.5 2.6 2.1-.4 4.8-2.2 4.1-3.5-.7-1.3-1.7-.9-3.8-1.4-2.1-.5-5.2-2.4-6-3.7-.9-1.3-1.7-4-1.7-4l-5.4 1.6z" opacity=".2" fill="#bb1616" class="color000 svgShape"></path>
+							<path fill="#f9eeee" d="M19.4 120.4s-8.5-1.5-12-8.3c-3.4-6.8-2-12.3-2.9-13.9s-3.1-1.2-3.6.6c-.5 1.8-1.2 13.5 4.9 19.8 6.3 6.3 13.8 7.8 13.8 7.8s1.8 6.3 5.5 8c3.7 1.7 5.1.5 5.1.5s-.9 2-.2 3.1c.7 1 8.4 3.1 9.5 4 1.1 1 2.1 3.8 4.9 2.8 2.8-1 3.7-2.1 3-3.4-.7-1.3-2.6-1.8-4-1.9s-6.5-2.5-6.5-2.5 2.2-2.1 2.7-3.7.3-2.7.3-2.7l6.9-2.6s1.2 5.4 1.5 9.2.5 5.6.9 7.4c.4 1.9.2 4.3 3.3 4s4.3-1.1 3.9-2.3c-.4-1.2-2.4-2.4-2.8-4.6-.4-2.1.1-12.9.4-14 .2-1.1 2.5-7.1 2.5-7.1l2.5-.5s1.1 7.8 1.5 11.3c.4 3.5.7 9.2.7 10.4s.7 2.6 2.2 2.7c1.5.2 4.6-.8 4.5-2.1-.1-1.3-2.3-3.1-2.5-4.6-.2-1.5-.5-14.8.9-19.4s2.4-7.1 2.4-7.1L60 91.5s-3.5.8-7.9.7c-4.5-.1-17.8-.1-25.4 9.5-7.8 9.7-7.3 18.7-7.3 18.7z" class="color999 svgShape"></path><path fill="#e5e5e5" d="M56.3 120.7s2.5-2.1 2.7-4.9c.2-2.8 1.8-5.1 3.2-6 1.4-1 6.2-3.4 6.2-3.4s1.3 4.3-.5 7.3-4.8 5.4-7.3 6.2-4.3.8-4.3.8z" class="colorE5E5E5 svgShape"></path><path d="M46.8 128s-.7-3.1-1-5.4c-.2-2.4-.9-6-.9-6s-.9 2.1-2.8 3-3.7 1.3-5.3.6c-1.6-.7-5.4-2.7-5.4-2.7s5.7 3.8 6.8 6.9c1.2 3.1 1.6 6.3 1.6 6.3l7-2.7z" opacity=".2" fill="#bb1616" class="color000 svgShape"></path><path fill="#f9eeee" d="M58.2 96s-.5 2.8.7 5.7c1.3 2.9 4 5.2 5.4 6.9 1.3 1.6 2.8 3.2 5.8 2.9 3-.4 3.2-1.9 4.1-3.1.9-1.2 4.1-5.7 4.6-8.7.5-3.1.1-5.3.1-5.3s2.1-7.3.5-8.2c-1.6-.9-3.2 2.7-5.1 2.9-2 .2-2.9-.3-5.1-.2-2.2.1-5.7 1-5.7 1s-3.3-3.4-5.3-2.7c-2.4.9 0 8.8 0 8.8z" class="color999 svgShape"></path><path fill="#47535a" d="M69.7 110.5c-.6 0-1.7-1-1.6-1.5.1-.5 2.9-.5 3.1.1.2.5-.9 1.4-1.5 1.4zM72 104.4s.3-1.8 1.8-2.4c1.5-.6 2.1-.3 2.1-.3s-.3 1.7-1.5 2.3c-1.1.6-2.4.4-2.4.4zM67.3 104.4s-.6-1.8-2-2.3-2.4 0-2.4 0 .2 1.5 1.4 2 3 .3 3 .3z" class="color2D3134 svgShape"></path><path d="M72.9 93.3s4.8-7.5 6.4-6.9c1.2.4-.4 8-.4 8s-1.3-1.2-3-1.5c-1.6-.3-3 .4-3 .4zM65.2 93.2s-5.3-6.3-6.9-5.8c-2.2.7-.1 8.6-.1 8.6s1.6-2.1 2.9-2.6 4.1-.2 4.1-.2z" opacity=".2" fill="#bb1616" class="color000 svgShape"></path></svg>
+							
+						</g>
 					</g>
+
+
 				</svg></a>
 				<div class="tit2">
 					<h2>ABOUT</h2>
