--- a/index.html
+++ b/index.html
@@ -1368,8 +1368,7 @@
 									</g>
 								</g>
 								<g>
-										<g id="SvgjsG1024" transform="matrix(0.6,0,0,0.6,62,320)"><svg
-												xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 240" width="288" height="288">
+										<g id="SvgjsG1024" transform="matrix(0.7,0,0,0.7,122,330)">
 												<path
 													d="M68.8 230C86 220.3 73 213 57 205.3c-17.8-8.5-24.9-11.7-40.5-1.6-9.5 6.1-2.4 15.9 13.8 23.5 18.4 8.7 26.3 9.6 38.5 2.8z"
 													opacity=".2" fill="#000000" class="color000 svgShape"></path>
