--- a/html/sub2.html
+++ b/html/sub2.html
@@ -77,7 +77,7 @@
 					Skills
 
 					<span class="scroll-btn" >
-						<a href="#">
+						<a href="#s">
 							<span class="mouse">
 								<span>
 								</span>
@@ -160,7 +160,7 @@
 					<div class="Skill_image_container" style="background-image: url(&quot;assets/img/skill_icon_msoffice.png&quot;);">
 						<div class="Skill_label">[중급]<br/>Intermediate</div>
 					</div>
-					<div class="Skill_image_container" style="background-image: url(&quot;assets/img/skill_icon_figma.png&quot;);">
+					<div class="Skill_image_container" style="background-image: url(&quot;assets/img/skill_icon_figma2.png&quot;);">
 						<div class="Skill_label">[기본]<br/>Basic</div>
 					</div>
 					<div class="Skill_image_container" style="background-image: url(&quot;assets/img/skill_icon_aws.png&quot;);">
@@ -182,6 +182,14 @@
 	<!-- script -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> 
-
+  <!-- 부드러운 스크롤 이동 -->
+  <script>
+	$('a').click(function () {
+	  $('html, body').animate({
+		scrollTop: $($.attr(this, 'href')).offset().top
+	  }, 300);
+	  return false;
+	});
+  </script>
   </body>
 </html>
