--- a/html/sub2.html
+++ b/html/sub2.html
@@ -115,7 +115,7 @@
 					</div>
 			</div>
 				</span>
-				<h2 class="Skill_Title"> Web Skils</h2><span class="Skill_Content">
+				<h2 class="Skill_Title"> Web Skills</h2><span class="Skill_Content">
 					<div class="Skill_image_container" style="background-image: url(&quot;assets/img/skill_icon_html.png&quot;);">
 						<div class="Skill_label">[기본+]<br/>Basic+</div>
 					</div>
