--- a/html/sub3.html
+++ b/html/sub3.html
@@ -122,7 +122,7 @@
 	</span>
 	
 	<div class="pdf">
-		<a href="assets/img/portfolio.pdf">
+		<a href="assets/img/portfolio_jp.pdf">
 			<p> VIEW PORTFOLIO (PDF) ></p>
 		</a>
 	</div>
