--- a/html/sub4.html
+++ b/html/sub4.html
@@ -468,7 +468,7 @@
 				<ul>
 					<li class="menu-tit">&diams; CONTACT &diams;</li>
 					<li class="menu-sub3">cfpjeffrey@gmail.com</li>
-					<li class="menu-sub1"><a href="./assets/img/portfolio.pdf">VIEW PORTFOLIO (PDF)</a></li>
+					<li class="menu-sub1"><a href="./assets/img/portfolio_jp.pdf">VIEW PORTFOLIO (PDF)</a></li>
 				</ul>
 			</div>
 			<div class="right-menu">
