--- a/index.html
+++ b/index.html
@@ -5355,7 +5355,7 @@
 				</svg></a>
 				<div class="tit2">
 					<h2>ABOUT</h2>
-					<h3>Resume &middot; Detail information</h3>
+					<h3>Detail information</h3>
 				</div>
 			<button class="no-hover">VIEW</button>
     </div>
@@ -5540,7 +5540,7 @@
 				<ul>
 					<li class="menu-tit">&diams; CONTACT &diams;</li>
 					<li class="menu-sub3">cfpjeffrey@gmail.com</li>
-					<li class="menu-sub1"><a href="html/assets/img/portfolio.pdf">VIEW PORTFOLIO (PDF) ></a></li>
+					<li class="menu-sub1"><a href="html/assets/img/portfolio_jp.pdf">VIEW PORTFOLIO (PDF) ></a></li>
 				</ul>
 			</div>
 			<div class="right-menu">
