--- a/html/sub2.html
+++ b/html/sub2.html
@@ -27,8 +27,12 @@
 </head>
 <body>
 <div class="contents">
+
 	<div id="section0-1">
-		
+	
+		<div class="nav-logo">
+		<a href="../index.html"><img src="./assets/img/logo.png" width="70px"></a>
+		</div>
 
 		<div class="sub-main">
 			<div>
@@ -174,10 +178,9 @@
 		</div>
 
 		
-
-		
 	</div>
 </div>
+	
 	
 	<!-- script -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
