--- a/html/sub3.html
+++ b/html/sub3.html
@@ -31,13 +31,14 @@
 </head>
 <body>
 <div class="contents">
+	
 	<div id="section0-2">
 
    
-<svg style="max-width:1350px; position:relative; left:50%; top:50%; transform:translate3d(-50%,-50%,0)" version="1.1" id="레이어_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+<svg style="max-width:1300px; position: relative;  transform:translate3d(0,0,0)" version="1.1" id="레이어_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
 	 y="0px" viewBox="0 0 946 602" style="enable-background:new 0 0 946 602;" xml:space="preserve">
 <style type="text/css">
-	.st0{fill:#389606;}
+	.st0{fill:#ffffff;}
 	.st1{fill:none;stroke:#95CAD1;stroke-miterlimit:10;}
 	.st2{opacity:0.1;}
 	.st3{enable-background:new    ;}
@@ -45,7 +46,7 @@
 	.st5{fill:#364875;}
 </style>
 <g>
-	<g class="st3">
+	<g class="st3"  transform="matrix(0.7,0,0,0.7,122,230)" >
 		<g>
 			<polygon class="st4" points="868.9,239.2 868.8,274.1 754.3,313.5 754.4,278.5 			"/>
 		</g>
@@ -117,8 +118,7 @@
 					</g>
 				</g>
 			</svg>
-	<span class="e-mail">cfpjeffrey@gmail.com <br>
-		<br>
+	<span class="e-mail">cfpjeffrey@gmail.com 
 	</span>
 	
 	<div class="pdf">
@@ -127,9 +127,6 @@
 		</a>
 	</div>
 	</div>
-	
-	
-	
 	
 	<div class="nav-logo">
 			<a href="../index.html"><img src="assets/img/logo.png" width="70px"></a>
@@ -148,8 +145,13 @@
 						<ul>
 							<li class="menu-tit">&diams; CONTACT &diams;</li>
 							<li class="menu-sub3">cfpjeffrey@gmail.com</li>
-							<li class="menu-sub1"><a href="./assets/img/portfolio.pdf">VIEW PORTFOLIO (PDF)</a></li>
 						</ul>
+		
+						<div class="pdf">
+							<a href="assets/img/portfolio_jp.pdf">
+								<p> VIEW PORTFOLIO (PDF) ></p>
+							</a>
+						</div>
 					</div>
 					<div class="right-menu">
 						<ul>
