--- a/html/sub4.html
+++ b/html/sub4.html
@@ -468,8 +468,13 @@
 				<ul>
 					<li class="menu-tit">&diams; CONTACT &diams;</li>
 					<li class="menu-sub3">cfpjeffrey@gmail.com</li>
-					<li class="menu-sub1"><a href="./assets/img/portfolio_jp.pdf">VIEW PORTFOLIO (PDF)</a></li>
 				</ul>
+
+				<div class="pdf">
+					<a href="assets/img/portfolio_jp.pdf">
+						<p> VIEW PORTFOLIO (PDF) ></p>
+					</a>
+				</div>
 			</div>
 			<div class="right-menu">
 				<ul>
@@ -506,7 +511,7 @@
 	$(document).ready(function() {
 		$('#fullpage').fullpage({
 			anchors: [ '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14'],
-			sectionsColor: ['#B4DBD2', '#1BBC9B' ],
+			sectionsColor: ['#9ddacb', '#1BBC9B' ],
 			scrollBar: true
 		});
 	});
