--- a/index.html
+++ b/index.html
@@ -5251,7 +5251,7 @@
 							<polygon class="st90" points="169.2,27.8 169,64.3 200.6,46 		"/>
 							
 							
-							<g>
+							<g> <!--사다리-->
 								<g class="st0 about-ladder">
 									<g>
 										<polygon class="st92" points="59.3,224.4 60.8,223.6 60.8,214.3 59.3,215.2 					"/>
@@ -5540,8 +5540,13 @@
 				<ul>
 					<li class="menu-tit">&diams; CONTACT &diams;</li>
 					<li class="menu-sub3">cfpjeffrey@gmail.com</li>
-					<li class="menu-sub1"><a href="html/assets/img/portfolio_jp.pdf">VIEW PORTFOLIO (PDF) ></a></li>
 				</ul>
+
+				<div class="pdf">
+					<a href="html/assets/img/portfolio_jp.pdf">
+						<p> VIEW PORTFOLIO (PDF) ></p>
+					</a>
+				</div>
 			</div>
 			<div class="right-menu">
 				<ul>
