메인수정 함
123

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 						.st99{fill:none;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;}
 						.st100{fill:#D86F6F;}
 					</style>
-					<a href="html/sub4.html"><g class="svg1">
+					<a href="html/sub2.html"><g class="svg1">
 						<g>
 							<g class="main-p">
 								<g class="st0">
@@ -5186,9 +5186,9 @@
 						</g>
 					</g>
 					</svg></a>
-			<a href ="html/sub4.html">
+			<a href ="html/sub2.html#s">
 				<div class="tit1">
-					<h2>PORTFOLIO</h2>
+					<h2>PORTFOLIO SKILLS</h2>
 					<h3>JSP &middot; SPRING &middot; Android Programing<br>HTML &middot; CSS &middot; JavaScript &middot; Others </h3>
 				</div>
 			</a>
@@ -5536,25 +5536,33 @@
 		
 		<div id="menu2">
 		  <div class="menupage">
-			<div class="left-menu">
+			<div class="#">
+				<!-- 구 'left-menu' -->
+			</div>
+			<div class="right-menu">
 				<ul>
-					<li class="menu-tit">&diams; CONTACT &diams;</li>
-					<li class="menu-sub3">cfpjeffrey@gmail.com</li>
+					<li class="menu-tit">&diams; NAVIGATION &diams;</li>
+					<li class="menu-sub"><a href="html/sub2.html">About Jeffrey</a></li>
 				</ul>
-
 				<div class="pdf">
 					<a href="html/assets/img/portfolio_jp.pdf">
 						<p> VIEW PORTFOLIO (PDF) ></p>
 					</a>
 				</div>
-			</div>
-			<div class="right-menu">
+				<br/>
+				<br/>
 				<ul>
-					<li class="menu-tit">&diams; NAVIGATION &diams;</li>
-					<li class="menu-sub"><a href="html/sub4.html">Portfolio</a></li>
-					<li class="menu-sub"><a href="html/sub2.html">About Me</a></li>
-					<li class="menu-sub"><a href="html/sub3.html">Contact</a></li>
+					<li class="menu-tit">&diams; CONTACT &diams;</li>
+					<li class="menu-sub3">cfpjeffrey@gmail.com</li>
 				</ul>
+				<br/>
+				<br/>
+				<ul>
+					<li class="menu-tit2">&diams; ON-AIR Portfolio &diams;</li>
+					<li class="menu-sub2"><a href="http://52.231.206.1:8080/second/" target="_blank">> Second Market</a></li>
+				</ul>
+
+				
 			</div>
 		  </div>
 		</div>
