네브바 적용
123

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 			opacity:0; transform:translateY(-10%); transition: all 1s ease 1s; 	
 		}
 		.svg3.show{
-			opacity:1; transform:translateY(0%);transition-delay:3s;
+			opacity:1; transform:translateY(0%);transition-delay:2s;
 		}
 		
 		.about-ladder {
 			opacity:0; transform:translateY(-10%); transition: all 1s ease 1s; 
-		}
+		} /* 사다리 */
 		.about-ladder.show {
-			opacity:1; transform:translateY(0%);transition-delay:3s;
+			opacity:1; transform:translateY(0%);transition-delay:2s;
 		}
 		.star1{
 			opacity: 0;
@@ -5542,7 +5542,7 @@
 			<div class="right-menu">
 				<ul>
 					<li class="menu-tit">&diams; NAVIGATION &diams;</li>
-					<li class="menu-sub"><a href="html/sub2.html">About Jeffrey</a></li>
+					<li class="menu-sub"><a href="html/sub2.html">About Me</a></li>
 				</ul>
 				<div class="pdf">
 					<a href="html/assets/img/portfolio_jp.pdf">
