--- a/html/sub2.html
+++ b/html/sub2.html
@@ -34,6 +34,47 @@
 		<a href="../index.html"><img src="./assets/img/logo.png" width="70px"></a>
 		</div>
 
+		<div class="nav2">
+			<div id="toggle">
+			  <div class="one"></div>
+			  <div class="two"></div>
+			  <div class="three"></div>
+			</div>
+			
+			<div id="menu2">
+			  <div class="menupage">
+				<div class="#">
+					<!-- 구 'left-menu' -->
+				</div>
+				<div class="right-menu">
+					<ul>
+						<li class="menu-tit">&diams; NAVIGATION &diams;</li>
+						<li class="menu-sub"><a href="html/sub2.html">About Me</a></li>
+					</ul>
+					<div class="pdf">
+						<a href="html/assets/img/portfolio_jp.pdf">
+							<p> VIEW PORTFOLIO (PDF) ></p>
+						</a>
+					</div>
+					<br/>
+					<br/>
+					<ul>
+						<li class="menu-tit">&diams; CONTACT &diams;</li>
+						<li class="menu-sub3">cfpjeffrey@gmail.com</li>
+					</ul>
+					<br/>
+					<br/>
+					<ul>
+						<li class="menu-tit2">&diams; ON-AIR Portfolio &diams;</li>
+						<li class="menu-sub2"><a href="http://52.231.206.1:8080/second/" target="_blank">> Second Market</a></li>
+					</ul>
+	
+					
+				</div>
+			  </div>
+			</div>
+		</div>
+
 		<div class="sub-main">
 			<div>
 				<!-- 로켓 svg -->
@@ -192,6 +233,17 @@
 		scrollTop: $($.attr(this, 'href')).offset().top
 	  }, 300);
 	  return false;
+	});
+
+			
+	$("#toggle").click(function() {
+		$(this).toggleClass("on");
+		$("#menu2").toggleClass("on");
+		$(".left-menu").toggleClass("on");
+		$(".left-menu ul").toggleClass("on");
+		$(".right-menu").toggleClass("on");
+		$(".right-menu ul").toggleClass("on");
+		
 	});
   </script>
   </body>
