--- a/html/sub3.html
+++ b/html/sub3.html
@@ -147,7 +147,7 @@
 				  <div class="right-menu">
 					  <ul>
 						  <li class="menu-tit">&diams; NAVIGATION &diams;</li>
-						  <li class="menu-sub"><a href="html/sub2.html">About Jeffrey</a></li>
+						  <li class="menu-sub"><a href="html/sub2.html">About Me</a></li>
 					  </ul>
 					  <div class="pdf">
 						  <a href="../html/assets/img/portfolio_jp.pdf">
