컨택트 조정
123

--- a/html/sub2.html
+++ b/html/sub2.html
@@ -49,11 +49,11 @@
 				<div class="right-menu">
 					<ul>
 						<li class="menu-tit">&diams; NAVIGATION &diams;</li>
-						<li class="menu-sub"><a href="html/sub2.html">About Me</a></li>
+						<li class="menu-sub"><a href="../html/sub2.html">About Me</a></li>
 					</ul>
 					<div class="pdf">
-						<a href="html/assets/img/portfolio_jp.pdf">
-							<p> VIEW PORTFOLIO (PDF) ></p>
+						<a href="../html/assets/img/portfolio_jp.pdf">
+							<p> VIEW PORTFOLIO (PDF) </p>
 						</a>
 					</div>
 					<br/>
