--- a/html/sub3.html
+++ b/html/sub3.html
@@ -42,8 +42,8 @@
 	.st1{fill:none;stroke:#95CAD1;stroke-miterlimit:10;}
 	.st2{opacity:0.1;}
 	.st3{enable-background:new    ;}
-	.st4{fill:#253151;}
-	.st5{fill:#364875;}
+	.st4{fill:#364775;}
+	.st5{fill:#4fc7adbe
 </style>
 <g>
 	<g class="st3"  transform="matrix(0.7,0,0,0.7,122,230)" >
@@ -74,7 +74,7 @@
     
 		<div class="sub-main">
 			
-			<span class="work">&diams; CONTACT &diams;</span>
+			<span class="contact-title">&diams; CONTACT &diams;</span>
       		<br>
 			<svg style="max-width:50px; max-height:50px; transform:translate3d(-10%,35%,0);" version="1.1" id="레이어_1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
 				viewBox="0 0 64 64" version="1.1">
@@ -122,14 +122,14 @@
 	</span>
 	
 	<div class="pdf">
-		<a href="assets/img/portfolio_jp.pdf">
-			<p> VIEW PORTFOLIO (PDF) ></p>
+		<a href="../html/assets/img/portfolio_jp.pdf">
+			<p> VIEW PORTFOLIO (PDF) </p>
 		</a>
 	</div>
 	</div>
 	
 	<div class="nav-logo">
-			<a href="../index.html"><img src="assets/img/logo.png" width="70px"></a>
+			<a href="../index.html"><img src="../html/assets/img/logo.png" width="70px"></a>
 		</div>
 	
 		<div class="nav2">
@@ -147,11 +147,11 @@
 				  <div class="right-menu">
 					  <ul>
 						  <li class="menu-tit">&diams; NAVIGATION &diams;</li>
-						  <li class="menu-sub"><a href="html/sub2.html">About Me</a></li>
+						  <li class="menu-sub"><a href="../html/sub2.html">About Me</a></li>
 					  </ul>
 					  <div class="pdf">
 						  <a href="../html/assets/img/portfolio_jp.pdf">
-							  <p> VIEW PORTFOLIO (PDF) ></p>
+							  <p> VIEW PORTFOLIO (PDF) </p>
 						  </a>
 					  </div>
 					  <br/>
