--- a/html/sub2.html
+++ b/html/sub2.html
@@ -52,7 +52,7 @@
 						<li class="menu-sub"><a href="../html/sub2.html">About Me</a></li>
 					</ul>
 					<div class="pdf">
-						<a href="../html/assets/img/portfolio_jp.pdf">
+						<a href="./assets/img/portfolio_jp.pdf">
 							<p> VIEW PORTFOLIO (PDF) </p>
 						</a>
 					</div>
