--- a/html/sub3.html
+++ b/html/sub3.html
@@ -76,8 +76,8 @@
 			
 			<span class="contact-title">&diams; CONTACT &diams;</span>
       		<br>
-			<svg style="max-width:50px; max-height:50px; transform:translate3d(-10%,35%,0);" version="1.1" id="레이어_1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-				viewBox="0 0 64 64" version="1.1">
+			<svg style="max-width:50px; max-height:50px; transform:translate3d(-10%, 35%,0)"  version="1.1" id="mail-icon1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+				viewBox="0 0 64 64" version="1.1" >
 				<title>mail</title>
 				<defs>
 					<path id="path-1" d="M.06 64V.04H64V64z" />
