동숲 베타오픈
1

--- a/html/sub3.html
+++ b/html/sub3.html
@@ -133,7 +133,7 @@
 						<li class="menu-sub2"><a href="http://52.231.206.1:8080/second/" target="_blank">ㆍSecond Market</a></li>
 						<li class="menu-tit3">&nbsp;</li>
 						<li class="menu-tit3">[Work in Progress]</li>
-						<li class="menu-sub2"><a href="http://52.231.206.1:8080/animalForest/main.do" target="_blank">ㆍ동숲 - 구현 작업중</a></li>
+						<li class="menu-sub2"><a href="http://52.231.206.1:8080/animalForest/main.do" target="_blank">ㆍ동숲 - Beta Open </a></li>
 					</ul>
 					<br/>
 					<div class="pdf">
