이메일 재정정
123

--- a/html/sub3.html
+++ b/html/sub3.html
@@ -84,7 +84,7 @@
 
 			<p id=mail>
 				<img src="../html/assets/img/mail.png"style=margin-bottom:-20px; width="50px"; height="50px" >
-				<span class="e-mail">Jeffrey0208@naver.com 
+				<span class="e-mail">jeffrey0208@naver.com 
 				</span>
 			</p>
 			
